Roterade och förstorade repeaterlistor och fyrar för amatörradio.

--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -505,14 +505,14 @@ användas för att inte störa närliggande kanaler. Kanalrastret är
 \centering
 \begin{tabular}{rll|rll}
 	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Rek. Anv.} & \textbf{Frekvens} & \textbf{Benämning} & \textbf{Rek. Anv.} \\ \hline
-	        446,00625 & PMR446 K1          & PMR                &         446,10625 & PMR446 K9\ \,\,/D1 & DPMR               \\
-	        446,01875 & PMR446 K2          & PMR                &         446,11875 & PMR446 K10/D2      & DPMR               \\
-	        446,03125 & PMR446 K3          & PMR                &         446,13125 & PMR446 K11/D3      & DPMR               \\
-	        446,04375 & PMR446 K4          & PMR                &         446,14375 & PMR446 K12/D4      & DPMR               \\
-	        446,05625 & PMR446 K5          & PMR                &         446,15625 & PMR446 K13/D5      & DPMR               \\
-	        446,06875 & PMR446 K6          & PMR                &         446,16875 & PMR446 K14/D6      & DPMR               \\
-	        446,08125 & PMR446 K7          & PMR                &         446,18125 & PMR446 K15/D7      & DPMR               \\
-	        446,09375 & PMR446 K8          & PMR                &         446,19375 & PMR446 K16/D8      & DPMR
+	        446,00625 & K1                 & PMR                &         446,10625 & K9\ \,\,/D1        & DPMR               \\
+	        446,01875 & K2                 & PMR                &         446,11875 & K10/D2             & DPMR               \\
+	        446,03125 & K3                 & PMR                &         446,13125 & K11/D3             & DPMR               \\
+	        446,04375 & K4                 & PMR                &         446,14375 & K12/D4             & DPMR               \\
+	        446,05625 & K5                 & PMR                &         446,15625 & K13/D5             & DPMR               \\
+	        446,06875 & K6                 & PMR                &         446,16875 & K14/D6             & DPMR               \\
+	        446,08125 & K7                 & PMR                &         446,18125 & K15/D7             & DPMR               \\
+	        446,09375 & K8                 & PMR                &         446,19375 & K16/D8             & DPMR
 \end{tabular}
 \caption{PMR-frekvenser}
 \label{tab:pmr-frekvenser}
@@ -531,15 +531,15 @@ tabell \ref{tab:SRBR-frekvenser}.
 \begin{table}[h]
 	\centering
 \begin{tabular}{rlrl}
-\textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde} \\ \hline
-444,600 & SRBR K1            & 2 W             & Short range business radio \\
-444,625 & SRBR K2            & 2 W             & Short range business radio \\
-444,800 & SRBR K3            & 2 W             & Short range business radio \\
-444,825 & SRBR K4            & 2 W             & Short range business radio \\
-444,850 & SRBR K5            & 2 W             & Short range business radio \\
-444,875 & SRBR K6            & 2 W             & Short range business radio \\
-444,925 & SRBR K7            & 2 W             & Short range business radio \\
-444,975 & SRBR K8            & 2 W             & Short range business radio
+	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde} \\ \hline
+	          444,600 & K1                 &             2 W & Short range business radio \\
+	          444,625 & K2                 &             2 W & Short range business radio \\
+	          444,800 & K3                 &             2 W & Short range business radio \\
+	          444,825 & K4                 &             2 W & Short range business radio \\
+	          444,850 & K5                 &             2 W & Short range business radio \\
+	          444,875 & K6                 &             2 W & Short range business radio \\
+	          444,925 & K7                 &             2 W & Short range business radio \\
+	          444,975 & K8                 &             2 W & Short range business radio
 \end{tabular}
 \caption{Frekvenser för SRBR}
 \end{table}
@@ -586,6 +586,8 @@ Kanalraster. Denna frekvenstabell blir lite mer komplicerad.
 \caption{Nya frekvensindelningen på kortdistansradiobandet}
 \label{tab:SRBR-frekvenser}
 \end{table}
+
+\clearpage
 
 \subsection{Marina VHF-frekvenser}
 
@@ -685,6 +687,7 @@ radiohorisont för att bestämma om det går att nå kuststationen eller ej.
 \subsubsection{Ostkusten}
 
 \begin{table}[h]
+\centering
 \begin{tabular}{lrr|lrr}
 \textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} & \textbf{Kuststation} & \textbf{Kanal}& \textbf{Horisont}\\
 \hline
@@ -712,6 +715,7 @@ Karlshamn      & 62 & 48 & Kivik         & 21 & 39\\
 \subsubsection{Västkusten}
 
 \begin{table}[h]
+\centering
 \begin{tabular}{lrr|lrr}
 \textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} &
 \textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} \\
@@ -728,6 +732,7 @@ Helsingborg & 60 & 28 & Malmö      & 65 & 25 \\
 \subsubsection{Insjöarna}
 
 \begin{table}[h]
+\centering
 \begin{tabular}{lrr|lrr}
 \textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} &
 \textbf{Kuststation} & \textbf{Kanal} & \textbf{Horisont} \\
@@ -767,6 +772,7 @@ repeatrar är det repeaterns utfrekvens som anges, dvs den som
 mobilstationen lyssnar på. Exempel: RV48.
 
 \begin{table}[h]
+\centering
 \begin{tabular}{crrlll}
 	\textbf{Band} & \textbf{Startfrekvens} & \textbf{Kanalraster} & \textbf{Duplex} & \textbf{Första kanal} & \textbf{Beräknas}    \\ \hline
 	    6\,m      &            51.000\,MHz &            10.0\,kHz & -100\,kHz       & F00                   & $f=51+k\cdot0.01$    \\
@@ -807,13 +813,13 @@ för respektive 12,5~kHz steg och 10~kHz för kortvåg.
 \begin{table}[h]
 \centering
 \begin{tabular}{rrrr}
-Kod & Basfrekvens & Kanalavstånd & Repeaterskift \\
-    & [MHz]       & [kHz]        & [kHz] \\ \hline
-H & 29,500 & 10,0 & -100 \\
-F & 51,000 & 10,0 & -600 \\
-V & 145,000& 12,5 & -600 \\
-U & 430,000& 12,5 & -2000 \\
-M & 1240,000 & 25 & -6000 \\
+	\bf Kod & \bf Basfrekvens & \bf Kanalavstånd & \bf Repeaterskift \\
+	        &      \bf  [MHz] &        \bf [kHz] &         \bf [kHz] \\ \hline
+	      H &          29,500 &             10,0 &              -100 \\
+	      F &          51,000 &             10,0 &              -600 \\
+	      V &         145,000 &             12,5 &              -600 \\
+	      U &         430,000 &             12,5 &             -2000 \\
+	      M &        1240,000 &               25 &             -6000
 \end{tabular}
 \label{tab:kanalavstand}
 \caption{Kanalavstånd och beteckning olika frekvensband}
@@ -852,10 +858,10 @@ M & 1240,000 & 25 & -6000 \\
 	51,740 &      F74 &       & 51,990 &     RF99 &
 \end{longtable}
 
-\subsection{FM-kanaler 2m-bandet}
+\subsection{FM-kanaler 2 m-bandet}
 
 \begin{longtable}{rrl|rrl}
-
+\caption{FM-kanaler 2\,m-bandet}\\
 \textbf{Frekvens} & \textbf{Kanal} & \textbf{Anm} &
 \textbf{Frekvens} & \textbf{Kanal} & \textbf{Anm} \\ \hline
 
@@ -966,12 +972,12 @@ aktivitetscenter som det numera kallas).
 
 \clearpage
 
+\begin{landscape}
+
 \subsection{Repeatrar distrikt 0}
 
-\scriptsize
-
 \begin{longtable}{llllrrlll}
-\bf Typ  & \bf Mod     & \bf Call & \bf Ort     & \bf Frekvens & \bf Duplex & \bf Access & \bf Lokator & \bf QRV? \\ \hline
+\bf Typ  & \bf Mod     & \bf Call & \bf Ort     & \bf Frekvens & \bf Duplex & \bf Access & \bf Lokator & \bf QRV? \\ \hline \endhead
 Repeater & C4FM        & SKØQO    & Bagarmossen & 434.5750     & -2.000     &            & JO99BG      & QRV      \\
 Repeater & DMR         & SMØWIU/R & Botkyrka    & 434.8750     & -2.000     & CC 0       & JO89WG      & QRV      \\
 Repeater & FM          & SKØRDZ   & Brottby     & 145.6500     & -0.600     & 1750/77.0  & JO99DN      & QRV      \\
@@ -1036,13 +1042,12 @@ Repeater & FM          & SLØZS/R  & Västberga   & 434.9000     & -2.000     & 
 Repeater & DMR         & SKØEN    & Älmsta      & 434.6000     & -2.000     & CC 0       & JO99JX      & QRV      \\
 Repeater & FM/DMR      & SKØEN    & Älmsta      & 145.7375     & -0.600     & 77.0/CC 0  & JO99JX      & QRV      \\
 \end{longtable}
-\normalsize
+
 
 \clearpage
 
 \subsection{Repeatrar distrikt 1}
 
-\scriptsize
 
 \begin{longtable}{llllrrlll}
 \bf Typ  & \bf Mod     & \bf Call & \bf Ort     & \bf Frekvens & \bf Duplex & \bf Access & \bf Lokator & \bf QRV? \\ \hline
@@ -1050,14 +1055,14 @@ Repeater   & FM / C4FM & SK1RGU   & Endre        & 145.7750     & -0.600     & 1
 Repeater   & FM        & SL1ZXK/R & Slite        & 434.6000     & -2.000     & 218.1        & JO97JR      & QRV      \\
 \end{longtable}
 
-\normalsize
+
 
 \subsection{Repeatrar distrikt 2}
 
-\scriptsize
+
 
 \begin{longtable}{llllrrlll}
-\bf Typ  & \bf Mod     & \bf Call & \bf Ort     & \bf Frekvens & \bf Duplex & \bf Access & \bf Lokator & \bf QRV? \\ \hline
+\bf Typ  & \bf Mod     & \bf Call & \bf Ort     & \bf Frekvens & \bf Duplex & \bf Access & \bf Lokator & \bf QRV? \\ \hline \endhead
 Repeater   & FM          & SK2AU/R   & Arjeplog           & 145.7000     & -0.600     & 1750       & JP86XC      & QRV      \\
            &             &           & Galtispouda        &              &            &            &             &          \\
 Repeater   & FM          & SK2CI     & Boden              & 145.6250     & -0.600     & 1750/107.2 & KP05SS      & QRV      \\
@@ -1098,16 +1103,16 @@ Repeater   & FM          & SK2RIU    & Vännäs/Granlundsb. & 434.7250     & -2.
 Repeater   & FM          & SK2RWJ    & Älvsbyn            & 145.6750     & -0.600     & 107.2      & KP05LQ      & QRV      \\
 \end{longtable}
 
-\normalsize
+
 
 \clearpage
 
 \subsection{Repeatrar distrikt 3}
 
-\scriptsize
+
 
 \begin{longtable}{llllrrlll}
-\bf Typ  & \bf Mod     & \bf Call & \bf Ort     & \bf Frekvens & \bf Duplex & \bf Access & \bf Lokator & \bf QRV? \\ \hline
+\bf Typ  & \bf Mod     & \bf Call & \bf Ort     & \bf Frekvens & \bf Duplex & \bf Access & \bf Lokator & \bf QRV? \\ \hline \endhead
 Repeater   & FM         & SK3RMG   & Bergsjö          & 1297.1000   & -6.000   & 1750       & JP81MX & QRV  \\
 Repeater   & FM         & SK3RET   & Bollnäs/Arbrå    & 145.6500    & -0.600   & 1750/127.3 & JP81CL & QRV  \\
            &            &          &                  &             &          & DTMF *5    &        &      \\
@@ -1168,15 +1173,15 @@ Repeater   & FM/C4FM    & SK3JR/R  & Östersund        & 145.7500    & -0.600   
 Repeater   & FM/C4FM    & SK3JR/R2 & Östersund        & 145.7875    & -0.600   & 127.3      & JP73HC & QRV  \\
            &            &          & Brattåsen        &             &          &            &        &      \\
 \end{longtable}
-\normalsize
+
 
 \clearpage
 
 \subsection{Repeatrar distrikt 4}
 
-\scriptsize
+
 \begin{longtable}{llllrrlll}
-\bf Typ  & \bf Mod    & \bf Call & \bf Ort             & \bf Frekvens & \bf Duplex & \bf Access    & \bf Lokator & \bf QRV? \\ \hline
+\bf Typ  & \bf Mod    & \bf Call & \bf Ort             & \bf Frekvens & \bf Duplex & \bf Access    & \bf Lokator & \bf QRV? \\ \hline \endhead
 Repeater & DMR        & SK3JR    & Östersund/Brattåsen & 434.5625     & -2.000     & CC 3          & JP73HC      & QRV      \\
 Repeater & FM         & SK3RQE   &                     & 145.6000     & -0.600     &               & JP81NV      & QRV      \\
 Repeater & DMR        & SA4BNA   & Arvika              & 434.9750     & -2.000     & CC 4          & JO69GN      & QRV      \\
@@ -1235,15 +1240,15 @@ Repeater & FM         & SK4TL/R  & Örebro              & 51.9500      & -0.600 
 Repeater & FM         & SK4TL/R  & Örebro              & 145.7125     & -0.600     & 1750 / DTMF 4 & JO79KH      & QRV      \\
          &            &          & Suttarboda          &              &            &               &             &          \\
 \end{longtable}
-\normalsize
+
 
 
 \clearpage
 
 \subsection{Repeatrar distrikt 5}
-\scriptsize
+
 \begin{longtable}{llllrrlll}
-\bf Typ  & \bf Mod    & \bf Call & \bf Ort           & \bf Frekvens & \bf Duplex & \bf Access      & \bf Lokator & \bf QRV? \\ \hline
+\bf Typ  & \bf Mod    & \bf Call & \bf Ort           & \bf Frekvens & \bf Duplex & \bf Access      & \bf Lokator & \bf QRV? \\ \hline \endhead
 Repeater & FM         & SK5BB/R  & Arboga/Kolsva     & 434.8750     & -2.000     & Carrier         & JP79WO      & QRV      \\
 Repeater & FM         & SK5BB/R  & Arboga/Kolsva     & 145.6750     & -0.600     & Carrier         & JP79WO      & QRV      \\
 Repeater & FM         & SK5LW/R  & Eskilstuna        & 51.8500      & -0.600     & 82.5            & JO89FJ      & QRV      \\
@@ -1302,15 +1307,15 @@ Repeater & FM         & SK5RHQ   & Västerås          & 145.7750     & -0.600  
 Repeater & FM         & SK5RHQ   & Västerås          & 434.7750     & -2.000     & 136.5 / 82.5    & JO89GO      & QRV      \\
 Repeater & FM         & SM5YMS   & Åtvidaberg        & 145.6625     & -0.600     & 82.5            & JO78XE      & QRV      \\
 \end{longtable}
-\normalsize
+
 
 \clearpage
 
 \subsection{Repeatrar distrikt 6}
 
-\scriptsize
+
 \begin{longtable}{llllrrlll}
-\bf Typ  & \bf Mod   & \bf Call & \bf Ort           & \bf Frekvens & \bf Duplex & \bf Access   & \bf Lokator & \bf QRV? \\ \hline
+\bf Typ  & \bf Mod   & \bf Call & \bf Ort           & \bf Frekvens & \bf Duplex & \bf Access   & \bf Lokator & \bf QRV? \\ \hline \endhead
 Repeater & FM        & SK6RIC   & Alingsås          & 145.6250     & -0.600     & 1750 / 114.8 & JO67GW      & QRV      \\
 Repeater & FM        & SK6RIC   & Alingsås          & 434.6250     & -2.000     & 1750 / 114.8 & JO67GW      & QRV      \\
 Repeater & DMR       & SK6DG    & Alingsås          & 434.5375     & -2.000     & CC 6         & JO67GV      & QRV      \\
@@ -1415,14 +1420,14 @@ Repeater & FM        & SK6RKI   & Öckerö            & 145.7500     & -0.600   
 Link     & FM        & SM6TZL/L & Örby              & 145.2375     & Simplex    & Carrier      & JO67IL      & QRV      \\
 Link     & FM        & SM6TZL/L & Örby              & 434.2250     & Simplex    & Carrier      & JO67IL      & QRV      \\
 \end{longtable}
-\normalsize
+
 
 \clearpage
 
 \subsection{Repeatrar distrikt 7}
-\scriptsize
+
 \begin{longtable}{llllrrlll}
-\bf Typ  & \bf Mod         & \bf Call & \bf Ort      & \bf Frekvens & \bf Duplex & \bf Access   & \bf Lokator & \bf QRV? \\ \hline
+\bf Typ  & \bf Mod         & \bf Call & \bf Ort      & \bf Frekvens & \bf Duplex & \bf Access   & \bf Lokator & \bf QRV? \\ \hline \endhead
 Repeater & FM              & SK7RFL   & Algutsrum    & 434.6000     & -2.000     & 1750/79.7    & JO86GQ      & QRV      \\
          &                 &          &              &              &            & DTMF 0       &             &          \\
 Repeater & FM              & SK7RFL   & Algutsrum    & 145.6000     & -0.600     & 1750/79.7    & JO86GQ      & QRV      \\
@@ -1530,7 +1535,10 @@ Repeater & FM              & SK7HW/R  & Växjö        & 145.6750     & -0.600  
          &                 &          & Hollstorp    &              &            &              &             &          \\
 Repeater & FM/DMR          & SK7REE   & Örkelljunga  & 434.9750     & -2.000     & 79.7/CC 7    & JO66PG      & QRV      \\
 \end{longtable}
-\normalsize
+
+
+\end{landscape}
+
 
 \clearpage
 
@@ -1960,12 +1968,9 @@ Alla frekvenser i kHz, bandbredder i Hz.
 
 \clearpage
 
+\begin{landscape}
 \section{Amatörradiofyrar}
-
 \subsection{Svenska fyrar VHF/UHF}
-
-\scriptsize
-
 \begin{longtable}{rlllrlrrl}
 	\bf Dist & \bf Signal & \bf Mod  & \bf Ort      & \bf Frekvens & \bf Lokator & \bf MASL & \bf MAGL & \bf Riktning \\ \hline
 	\endhead
@@ -2010,7 +2015,8 @@ Alla frekvenser i kHz, bandbredder i Hz.
 	       7 & SK7VHF     & CW       & Sjöbo        &     144.4610 & JO65UQ      &       25 &       25 & Omni         \\
 	       7 & SK7GH/B    & CW       & Värnamo      &      28.2980 & JO77BF      &      230 &       10 & Omni
 \end{longtable}
-\normalsize
+\end{landscape}
+
 \clearpage
 
 \subsection{IBP -- International Beacon Project}
