Fixat lite smått.

--- a/tex/forord.tex
+++ b/tex/forord.tex
@@ -3,15 +3,15 @@
 
 \section*{Förord}
 
-Radiohandboken fyller 10 år i år! Den första utgåvan, eller version
-1.0.0 publicerades på nätet 1:a november 2015. Det är fasen inte så
-illa pinkat ändå!
+Radiohandboken fyller 10 år i år! Den första utgåvan, eller version 1.0.0
+publicerades på nätet 1:a november 2015. Det är fasen inte så illa pinkat
+ändå! Nu har vi kommit till den 11:e upplagan av den och den har många stora
+förändringar mot tidigare som jag hoppas blir till det bättre!
 
-Denna version av radiohandboken innehåller en stor mängt förändringar mot
-tidigare versioner. Dels har jag valt att ta bort de specifika VHF- och
-HF-versionerna av den och i stället bara inkludera allting i samma handbok för
-enkelthets skull. Jag har lagt vikt vid att i stället försöka göra det tydligt
-så den som inte är intresserad av vissa delar enkelt kan hoppa över dem.
+Jag valt att ta bort de specifika VHF- och HF-versionerna av handboken och i
+stället bara inkludera allting i samma handbok för enkelhets skull. Jag har
+lagt vikt vid att i stället försöka göra det tydligt så den som inte är
+intresserad av vissa delar enkelt kan hoppa över dem.
 
 Det har också medfört en helt ny struktur och kapitelindelning på en högre
 nivå som gör att det är mer logiskt strukturerat. Alla frekvenslistor är
@@ -22,10 +22,9 @@ Ett index har skapats med indexering av de olika begreppen i boken så att det
 ska bli enklare att hitta. Denna indexering återfinns längst bak i boken med
 länkar så att man kan klicka sig fram i en PDF.
 
-De svenska morsetecknen har också fått komma med i denna utgåva, det
-är inte så vanligt att folk ägnar sig åt morsesignalering i dag som
-det var en gång i tiden men det hör definitivt till så det ska förstås
-vara med.
+De svenska morsetecknen har också fått komma med i denna utgåva, det är inte
+så vanligt att folk ägnar sig åt morsetelegrafering i dag som det var en gång
+i tiden men det hör definitivt till så det ska förstås vara med.
 
 Många frekvenslistor har blivit uppdaterade med nya frekvenser, information
 och kanaler, felaktigheter har korrigerats och jag hoppas att det mesta nu
