Lade till i prepperappendix om frekvensband. Skapade inledning för ett avsnitt om vågutbredning.

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -112,3 +112,40 @@ innan en kris uppstår. Saker som generatorer och ackumulatorbatterier som kan
 laddas (exempelvis med startkablar från bilens generator) kommer man mycket
 långt med!
 
+\section{Frekvensband}
+
+För de som inte har amatörradiocertifikat är egentligen följande frekvensband de mest lämpliga att försöka använda:
+
+\begin{table}[H]
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{rl}
+	  \bf Band & \bf Användningsområde                                                                             \\ \hline
+	    27 MHz & Vid gynnsamma förhållanden lång utbredning, men också risk för störningar                         \\
+	    69 MHz & Ett robust band men endast tillåtet i Sverige, bra markvågsutbredning                             \\
+	Flygbandet & Rekommenderas inte, AM-sändning dessutom.                                                         \\
+	 VHF-Marin & För nödsamtal nära kusten, till sjöss, eller någon av de stora insjöarna.                         \\
+	   155 MHz & Jaktkanalerna, bra för lite kortare förbindelser och handapparater.                               \\
+	   444 MHz & Kortdistansradiokanalerna, begränsat med effekt men bra i urban miljö och mellan fordon.          \\
+	   446 MHz & Räckvidden är från några hundra meter till en km ungefär i terräng beroende på. Familjemedl.
+\end{tabular}}
+\caption{Lämpliga frekvensband landmobil radio.}
+\end{table}
+
+\begin{table}[H]
+\resizebox{\textwidth}{!}{%
+\begin{tabular}{rl}
+	\bf Band & \bf Användningsområde                                                                                             \\ \hline
+	   160 m & Mer sällan använt och blir stora antenner men dagtid på sommaren kan det vara riktigt bra för NVIS.               \\
+	    80 m & Dagtid utmärkt för kontakter runt hela skandinavien med NVIS. Nattetid ofta störningar österifrån.                \\
+	    60 m & Ett relativt nytt band men också få användare, utmärkt utbredning dag som natt.                                   \\
+	    40 m & Har många egenskaper från 80 meter, mer utpräglad skipzon NVIS.                                                   \\
+	    20 m & Fungerar ofta globalt med bra antenner. Stor skipzon.                                                             \\
+	    17 m & Liknande egenskaper som 20 m men betydligt färre användningar och ingen contest.                                  \\
+	    15 m & Stort och bra band, uttalad skipzon, vid perioder med låg solaktivitet kan det vara sämre rymdvåg                 \\
+	 12/10 m & Utmärkt vid hög solfläcksaktivitet, global utbredning med små medel men ofta osäkert.          \\
+	     6 m & Användbart för relativt god markvågsutbredning men få användare                                                   \\
+	     2 m & Repeatrar och direktkontakt, relativt enkelt bygga riktantenner. God utbredning i landsbygd. \\
+	   70 cm & Utmärkt i stad och bebyggelse, som kommunikation mellan fordon etc. Också många repeatrar
+\end{tabular}}
+\caption{Lämpliga frekvensband amatörradio.}
+\end{table}
