--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -274,6 +274,18 @@ Deviation & Modulation & Bandbredd & Kanaldelning\\ \hline
 \end{tabular}
 \end{center}
 
+
+\section{Vågutbredning}
+\todo{Vågutbredning}
+
+\subsection{Markvåg}
+
+\subsection{Rymdvåg}
+
+\subsection{Skipzon}
+
+
+
 \section{Termiska brusgolvet}
 När man lyssnar i radion på en frekvens där ingen nyttosignal finns hörs ett
 brus. Detta brus består av olika komponenter men en av de viktigaste är det
