--- a/rhb.tex
+++ b/rhb.tex
@@ -13,7 +13,7 @@
 \newcommand{\DokVersion}{11:e utgåvan} 					% Utgåva i fortsättningen
 \newcommand{\DokYear}{2025}
 \newcommand{\DokumentDatum}{\today}
-\newcommand{\ISBN}{---}
+\newcommand{\ISBN}{978-91-531-4763-3}
 \newcommand{\Linkhome}{www.sikvall.se}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[10pt, swedish,
