Uppdaterad IEEE-tabeller som inte helt stämde.

--- a/rhb.tex
+++ b/rhb.tex
@@ -10,7 +10,7 @@
 \newcommand{\Forfattare}{Täpp-Anders Sikvall}
 \newcommand{\Initialer}{SM5UEI}
 \newcommand{\Epostadress}{anders@sikvall.se}
-\newcommand{\DokVersion}{11:e utgåvan} 					% Utgåva i fortsättningen
+\newcommand{\DokVersion}{1:a utgåvan} 					% Utgåva i fortsättningen
 \newcommand{\DokYear}{2025}
 \newcommand{\DokumentDatum}{\today}
 \newcommand{\ISBN}{978-91-531-4763-3}
