--- a/tex/forord.tex
+++ b/tex/forord.tex
@@ -3,10 +3,10 @@
 
 \section*{Förord}
 
-Radiohandboken fyller 10 år i år! Den första utgåvan, eller version 1.0.0
-publicerades på nätet 1:a november 2015. Det är fasen inte så illa pinkat
-ändå! Nu har vi kommit till den 11:e upplagan av den och den har många stora
-förändringar mot tidigare som jag hoppas blir till det bättre!
+Radiohandboken fyller 10 år i år! Den första versionen 1.0.0 publicerades på
+nätet 1:a november 2015. Det är fasen inte så illa pinkat ändå! Nu har vi
+kommit till den 11:e uppdateringen av den och den har fått ISBN och vuxit upp.
+Detta blir därför den första officiella utgåvan.
 
 Jag valt att ta bort de specifika VHF- och HF-versionerna av handboken och i
 stället bara inkludera allting i samma handbok för enkelhets skull. Jag har
