--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -80,51 +80,41 @@ lägsta frekvenserna.
 \section{IEEE-benämningar på frekvensband}
 \label{sec:IEEE-benamningar}
 
-\subsection{Äldre benämningar}
-
-\begin{table}[H]
-	\centering
-	\begin{tabular}{lr}
-		\textbf{Band} & \textbf{Frekvens} \\ \hline
-		A             &        0--250 MHz \\
-		B             &      250--500 MHz \\
-		C             &     100--1000 MHz \\
-		D             &          1--2 GHz \\
-		E             &          2--3 GHz \\
-		F             &          3--4 GHz \\
-		G             &          4--6 GHz \\
-		H             &          6--8 GHz \\
-		I             &         8--10 GHz \\
-		J             &        10--20 GHz \\
-		K             &        20--45 GHz \\
-		L             &        40--60 GHz \\
-		M             &       60--100 GHz \\
-		N             &      100--200 GHz \\
-		O             &      100--200 GJz
-	\end{tabular}
-	\caption{Äldre IEEE-benämningar på frekvensband}
-\end{table}
-
 \subsection{Nuvarande benämningar}
 
 \begin{table}[H]
 	\centering
-	\begin{tabular}{lr}
-		\textbf{Band} & \textbf{Frekvens} \\ \hline
-		I             &      100--150 MHz \\
-		G             &      250--500 MHz \\
-		P             &      225--390 MHz \\
-		L             &     390--1550 MHz \\
-		S             &    1550--3900 MHz \\
-		C             &    3900--6200 MHz \\
-		X             &   6200--10900 MHz \\
-		Ku            &    10,9--20,0 GHz \\
-		Ka            &        20--36 GHz \\
-		Q             &        36--46 GHz \\
-		V             &         46-56 GHz \\
-		W             &       56--100 GHz
+	\begin{tabular}{cr|cr}
+		\textbf{Band} & \textbf{Frekvens} & \bf Band & \bf Frekvens \\ \hline
+		      A       &        0--250 MHz &    I     &    8--10 GHz \\
+		      B       &      250--500 MHz &    J     &   10--20 GHz \\
+		      C       &     100--1000 MHz &    K     &   20--45 GHz \\
+		      D       &          1--2 GHz &    L     &   40--60 GHz \\
+		      E       &          2--3 GHz &    M     &  60--100 GHz \\
+		      F       &          3--4 GHz &    N     & 100--200 GHz \\
+		      G       &          4--6 GHz &    O     & 100--200 GHz \\
+		      H       &          6--8 GHz &          &
 	\end{tabular}
-	\caption{Nyare IEEE-benämningar på frekvensband}
+	\caption{Moderniserade IEEE-benämningar på frekvensband}
+\end{table}
+
+\subsection{Äldre benämningar}
+
+\begin{table}[H]
+	\centering
+	\begin{tabular}{cr|cr}
+		\textbf{Band} & \textbf{Frekvens} &    &                \\ \hline
+		      I       &      100--150 MHz & K  & 18,0--25,6 GHz \\
+		      G       &      250--500 MHz & Ka &     20--36 GHz \\
+		      P       &      225--390 MHz & Q  &     36--46 GHz \\
+		      L       &     390--1550 MHz & V  &     46--56 GHz \\
+		      S       &    1550--3900 MHz & E  &     60--90 GHz \\
+		      C       &    3900--6200 MHz & W  &    56--100 GHz \\
+		      X       &   6200--10900 MHz & F  &     90-140 GHz \\
+		     Ku       &    10,9--20,0 GHz & D  &   110--170 GHz \\
+		              &                   & Y  &   325--500 GHz
+	\end{tabular}
+	\caption{Äldre IEEE-benämningar som fortfarande används}
 \end{table}
 
 \section{Egenskaper olika frekvensband}
@@ -340,7 +330,7 @@ I föregående tabell ligger band IV och band V inom gränserna för UHF.
 \section{Allmänna frekvenser VHF--UHF}
 
 Dessa frekvenser är avsedda för allmänhet eller för de specifika ända\-mål som
-anges i undantagsföreskriften. Det innebär att de kan brukas för de ändamål
+anges i PTS undantagsföreskrift. Det innebär att de kan brukas för de ändamål
 som anges i PTS för\-fatt\-nings\-sam\-ling\-ar och sammanställning över ej
 tillståndspliktiga frekvenser. Observera att du är skyldig att själv
 kontrollera bestämmelserna innan en frekvens brukas.
