--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -60,7 +60,7 @@ Effekter anges i W eller i decibel relaterat till 1 mW (dBm) eller relaterat
 	          10 mW &          -20 &           10 &            20 W &           13 &           43 &          1.5 kW &           32 &           62 \\
 	         100 mW &          -10 &           20 &            50 W &           17 &           47 &          2.0 kW &           33 &           63
 \end{tabular}
-\caption{Tabell över effekt och decibelskalor}
+\caption{Tabell över effekt och dBW/dBm}
 \end{table}
 
 \subsection{Antennvinst i dBi och dBd}
