Lagt till information om Maidenhead lokator

--- a/rhb.tex
+++ b/rhb.tex
@@ -42,6 +42,7 @@ a4paper, twoside]{book}                % De viktigaste inställningarna för dok
 \usepackage{pdflscape}                 % Kunna göra vissa sidor liggande i PDF
 \usepackage{wrapfig}                   % Kunna wrappa figurer
 \usepackage{float}                     % Utökade optioner för floats
+\usepackage{subfig}                    % För att kunna sätta bilder side-by-side tex
 \usepackage{caption}
 %\captionsetup{justification=raggedright,singlelinecheck=false}
 \usepackage{makeidx}                   % Indexering
