--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -516,7 +516,46 @@ distriktsiffran.
 \caption{Distrikt och CTCSS-toner}
 \end{table}
 
+\section{Lokator enligt Maidenhead}
+\index{lokator}
+\index{maidenhead}
 
+Maidenhed Locator System används bland annat av radioamatörer för att peka ut
+positioner, räkna ut avstånd mellan två olika positioner och liknande. Man
+känner igen dem på formatet som är ''BBSSbbSS'' altså, två stora bokstäver,
+två siffror, två små bokstäver och ytterligare två siffror. Det finns tillägg
+till systemet som lägger på ytterligare bokstäver och siffror.
+
+Systemet används i många loggprogram för amatörradio, tävlingar och är ett
+bekvämt sätt att internationellt kunna ange sin position med lagom noggrannhet
+utan att behöva ta till lokala ortsnamn och liknande.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.5\textwidth]{pic/lokator.png}
+	\caption{Lokatorns delar. Från Wikipedia.}
+\end{figure}
+
+Ett fält är ett stort geografiskt område så i regel pratar man om rutor och
+använder mist de 4 första i lokatorn. Man är då nere på ungefär kommunnivå i
+storlek.
+
+Men oftast använder man också ''subsquare'' delen och är då nere på en ruta
+som är en mindre tätort i storlek vilket är en ganska lagom stor yta. Min
+lokator är t.ex. JP80TM.
+
+\begin{figure}[H]
+	\centering
+	\subfloat{\includegraphics[width=0.35\textwidth]{pic/lokator-ruta.png}}%
+	\qquad
+	\subfloat{\includegraphics[width=0.35\textwidth]{pic/lokator-subruta.png}}
+	\caption{Exempel på fyr- och sexställig lokator}
+\end{figure}
+
+Det finns många webresurser för att söka en lokator, en sådan är till exempel
+denna som använder sig av Open Streetmaps,
+\url{https://f5len.org/tools/locator} men det finns naturligtvis många andra
+alternativ, inte minst som appar till telefoner och surfplattor.
 
 \section{Missanpassning}
 
