Tillhyfsning av några delar, utseparering av 1:a-sida mm

--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -624,6 +624,8 @@ Där RL är return loss i dB och VSWR är ståendevågförhållandet, exempelvis
 
 \section{Radioberäkningar för VHF och UHF}
 
+Några av de vanligaste radioberäkningarna man kan komma att behöva göra.
+
 \subsection{Beräkning av radiohorisonten}
 
 Radiohorisonten är den sträcka som markvågen kan nå utan särskilda hjälpmedel
@@ -661,7 +663,6 @@ För optisk sikt kan man säga följande:
 \end{equation}
 
 I båda ovanstående är radien $r$ i kilometer och höjden $h$ i meter.
-
 
 \subsection{Sträckdämpning}
 
