Mer om vågutbredning (tropo)

--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -286,7 +286,6 @@ uppfan SSB-modulationen.
 \section{Vågutbredning}
 \label{vågutbredning}
 \index{vågutbredning}
-\todo{Vågutbredning}
 
 Vågutbredning är något som är väldigt viktigt för radiokommunikation och
 beroende på vilken frekvens som används kan vågutbredningen se mycket olika ut
@@ -362,11 +361,38 @@ brukar kunna bli mellan 300--600 km.
 Det betyder att man kan prata från mellansverige med större delen av
 skandinavien och norra europa på NVIS.
 
-\subsection{Atmosfäriska utbredningar}
+\subsection{Sporadiskt E}
+\index{sporadiskt E}
+\index{Es}
+
+Ibland kan E-skiktet i jonosfären joniseras och då kan det bli riktigt fin
+vågutbredning även på 6\,m bandet och förstås de övre frekvenserna på
+kortvågen där man kan få riktigt bra långväga förbindelser. Sådant kallas för
+''sporadiskt E'' när det uppträder och det kan vara några timmar eller kortare
+stunder.
+
+\todo{Mer om sporadiskt E}
+
+\subsection{Troposfärutbredning}
 \index{tropo}
 \index{atmosfärisk utbredning}
 
-\todo{Atmosfäriska utbredningar}
+Under vissa väderförhållanden kan man få ett fenomen som kallas för inversion.
+Normalt avtar temperaturen i atmosfären med ungefär 1$^\circ$ per 100 meter
+men under dessa speciella förhållanden finner man plötsligt ett varmare
+luftskikt längre upp. När detta inträffar kan radiosignalerna studsa på detta
+om de kommer in med rätt vinkel.
+
+Detta kallas i dagligt tal för ''tropo'' och är i vissa sammanhang som för
+radiolänk i tropiska länder ett stort problem men för radioamatörer är det
+kära tillfällen att nå bra mycket längre än normalt på band som 6\,m, 2\,m,
+och även 70\,cm.
+
+Ibland kan signalen studsa mellan flera lager innan den kommer ut igen och
+kommer ner till marken, man har då fått så kallad ''duktning'' och det går
+ibland att nå mer än tiofallt den vanliga markvågsutbredningen.
+
+Tropo uppträder främst på sommarhalvåret vid våra breddgrader.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
